# nc-vpnc

./: .dockerignore  .gitignore  README.md  install.sh  migrate.sh  prep_host.sh
.github/workflows/: test_infra.yaml
config/etc/: strongswan.conf
config/snmp/: vpnc.conf
config/strongswan/: vpnc.conf
config/vpnc/config/: config-endpoint.yaml.example  config-hub.yaml.example  config.yaml.example
config/vpnc/scripts/: updown-downlink.sh
config/vpnc/templates/: downlink.conf.j2  frr-bgp.conf.j2  frr.conf.j2  iptables-downlink.conf.j2  iptables-uplink.conf.j2  swanctl-downlink.conf.j2  swanctl-uplink.conf.j2  swanctl.conf.j2  uplink.conf.j2
config/vpnc/units/: ncubed-vpnc-endpoint.service  ncubed-vpnc-hub.service  ncubed-vpnc.service
customer/etc/ipsec.d/: customer.updown
docker/22.04/: Dockerfile
docker/2204/: Dockerfile
docker/24.04/: Dockerfile
docker/2404/: Dockerfile
hub/: install.sh  requirements.txt
hub/etc/: ipsec.conf
live/: prep_network.sh
live/customer/: install
live/customer/etc/: ipsec.conf
live/hub/: install
old/hub/etc/: ipsec.secrets
setup/: migrate.py  migrate.sh  profile-nc-vpn.sh
test/00_setup/: build-image.sh  healthcheck.sh  install.sh  vpnc.clab.yaml
test/01_base_config/cli/: authorized_keys  cli00.sh  cli01.sh  db.example.com_cli00  named.conf.local  sshd_lab.conf
test/01_base_config/cli00/: config.sh
test/01_base_config/cli01/: config.sh  db.example.com
test/01_base_config/end00/: DEFAULT.yaml  E0001.yaml  config.sh  tenant.e0001.yaml
test/deploy/: vpnc.clab.yaml
test/endpoint/: install.sh  remote.c0001.yaml  service.config.yaml  tenant.e0001.yaml
test/env00/hub00/: install.sh  (+2 more)
test/hub/: install.sh  remote.c0001.yaml  service.config.yaml  tenant.c0001.yaml
test/mgmt/: install.sh  ncubed-vpnc-mgmt-test.service  ncubed-vpnc-mgmt-test.sh
vpnc/: README.md  install.sh  migrate.sh  pyproject.toml  requirements.txt
vpnc/etc/snmp/snmpd.conf.d/: frr-snmp.conf  snmpv3.conf
vpnc/etc/swanctl/conf.d/: default-downlinks.conf  default-uplinks.conf
vpnc/opt/ncubed/config/vpnc/candidate/remote/: config.yaml.example
vpnc/opt/ncubed/config/vpnc/candidate/service/: config-hub.yaml.example
vpnc/opt/ncubed/config/vpnctl/service/: config-hub.yaml.example
vpnc/opt/ncubed/vpnc.service/: main.py
vpnc/opt/ncubed/vpnc.service/scripts/: install.sh  updown-downlink.sh
vpnc/opt/ncubed/vpnc.service/templates/: downlink.conf.j2  frr-bgp.conf.j2  iptables.conf.j2  uplink.conf.j2
vpnc/opt/ncubed/vpnc.service/units/: ncubed-vpnc-endpoint.service  ncubed-vpnc-hub.service
vpnc/opt/ncubed/vpncservice/: constants.py  consts.py  data.py  datacls.py  endpoint.py  helpers.py  hub.py  main.py  vpncdata.py  vpncendpoint.py  vpncglobals.py  vpnchelpers.py  vpnchub.py
vpnc/opt/ncubed/vpncservice/scripts/: install.sh  migrate.sh
vpnc/opt/ncubed/vpncservice/templates/: downlink.conf.j2  frr-bgp.conf.j2  iptables.conf.j2
vpnc/opt/ncubed/vpncservice/units/: ncubed-vpnc-endpoint.service  ncubed-vpnc-hub.service
vpnc/opt/ncubed/vpnctl/: pyproject.toml  vpnctl.py
vpnc/opt/ncubed/vpnctl/vpnctl/: datacls.py  helpers.py  main.py  vpncconst.py  vpncdata.py  vpncremote.py  vpncremotecon.py  vpncservice.py  vpncservicecon.py  vpnctl.py  vpncvalidate.py
vpnc/src/vpnc/: __init__.py  config.py  core.py  helpers.py  main.py  shared.py
vpnc/src/vpnc/ctl/: bgp.py  helpers.py  main.py  service.py  service_ni.py  service_ni_con.py  servicebgp.py  serviceuplink.py  tenant_ni_con.py  tenantcon.py  tenants.py  tenants_nat.py  tenants_ni.py
vpnc/src/vpnc/frr/: __init__.py  frr.py
vpnc/src/vpnc/frr/templates/: frr.conf.j2
vpnc/src/vpnc/models/: __init__.py  base_models.py  connections.py  enums.py  info.py  ipsec.py  models.py  network_instance.py  physical.py  ssh.py  tenant.py  wireguard.py
vpnc/src/vpnc/models/templates/: iptables-downlink.conf.j2  iptables-endpoint.conf.j2  iptables-external.conf.j2  iptables-icmpv6-forward.conf.j2  iptables-ipv6-nat.conf.j2  iptables-ipv6-npt.conf.j2
vpnc/src/vpnc/network/: __init__.py  interface.py  namespace.py  route.py
vpnc/src/vpnc/network_instance/: __init__.py  general.py  ni_core.py  ni_downlink.py  ni_external.py
vpnc/src/vpnc/network_instance/templates/: iptables-core.conf.j2  iptables-downlink.conf.j2  iptables-external.conf.j2  iptables-icmpv6-forward.conf.j2  iptables-icmpv6-in-out.conf.j2  iptables-ipv6-nat.conf.j2
vpnc/src/vpnc/services/: configuration.py  ssh.py  vpncmangle.py
vpnc/src/vpnc/services/frr/: __init__.py  frr.py
vpnc/src/vpnc/services/frr/templates/: frr.conf.j2
vpnc/src/vpnc/services/routes/: __init__.py  monitor.py
vpnc/src/vpnc/services/ssh/: __init__.py  ssh.py
vpnc/src/vpnc/services/strongswan/: __init__.py  monitor.py  strongswan.py
vpnc/src/vpnc/services/vpncmangle/: __init__.py  vpncmangle.py
vpnc/src/vpnc/services/wireguard/: __init__.py
vpnc/src/vpnc/services/wireguard/templates/: wireguard.conf.j2
vpnc/src/vpnc/strongswan/: __init__.py  monitor.py  strongswan.py
vpnc/src/vpnc/vpncmangle/: vpncmangle.py
vpnc/vpnc/: __init__.py  config.py  consts.py  core.py  datacls.py  helpers.py  main.py  models.py  monitors.py  observers.py  vpnc_endpoint.py  vpnc_hub.py  vpncendpoint.py  vpnchub.py
vpnc/vpnc/connections/: __init__.py
vpnc/vpnc/ctl/: helpers.py  main.py  remote.py  remotecon.py  service.py  servicebgp.py  servicecon.py  serviceuplink.py  tenant.py
vpnc/vpnc/frr/templates/: frr.conf.j2
vpnc/vpnc/mangle/: main.py
vpnc/vpnc/models/: __init__.py  base_enums.py  base_models.py  ipsec.py  physical.py
vpnc/vpnc/network/: interface.py  namespace.py
vpnc/vpnc/network_instance/: __init__.py  general.py
vpnc/vpnc/network_instance/templates/: iptables-core.conf.j2  iptables-downlink.conf.j2  iptables-external.conf.j2  iptables-icmpv6-forward.conf.j2  iptables-icmpv6-in-out.conf.j2
vpnc/vpnc/strongswan/: __init__.py
vpnc/vpnc/strongswan/templates/: swanctl.conf.j2
vpncmangle/: pyproject.toml
vpncmangle/src/vpncmangle/: __init__.py  config.py  helpers.py  main.py  observers.py
vpncmangle/vpncmangle/: __init__.py
(+106 files in other folders)
