[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpnc"
description = "Manages ncubed-vpnc configuration"
readme = "README.md"
authors = [{ name="Tony Fortes Ramos", email="tony.fortesramos@ncubed.nl" }]
requires-python = ">=3.10"
keywords = ["ncubed", "vpnc", "vpn"]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "deepdiff~=6.2",
    "Jinja2~=3.1",
    "pydantic~=2.5",
    "pyroute2~=0.7",
    "PyYAML~=6.0",
    "typer[all]~=0.9",
    "vici~=5.9",
    "watchdog~=3.0",
    "packaging",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit",
    "types-PyYAML",
]

[project.scripts]
vpnc = "vpnc.main:main"
vpnctl = "vpnc.ctl.main:app"

[tool.setuptools.dynamic]
version = {attr = "vpnc.__version__"}
