[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpncmangle"
description = "Runs a process to mangle DNS responses"
readme = "README.md"
authors = [{ name="Tony Fortes Ramos", email="tony.fortesramos@ncubed.nl" }]
requires-python = ">=3.10"
keywords = ["ncubed", "vpncmangle", "mangle"]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "NetfilterQueue~=1.1",
    "scapy~=2.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit",
]

[project.scripts]
vpncmangle = "vpncmangle.main:main"

[tool.setuptools.dynamic]
version = {attr = "vpncmangle.__version__"}
