[build-system]
requires = ["setuptools >= 64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpncmangle"
description = "Runs vpncmangle to edit DNS responses"
readme = "README.md"
authors = [{ name="Tony Fortes Ramos", email="tony.fortesramos@ncubed.nl" }]
requires-python = ">=3.10"
keywords = ["ncubed", "vpncmangle", "mangle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Linux",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: System :: Networking",
]
dependencies = [
    "NetfilterQueue~=1.1",
    "scapy~=2.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
vpncmangle = "vpncmangle.main:main"

[tool.setuptools.dynamic]
version = {attr = "vpncmangle.__version__"}
